--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -2,11 +2,24 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic::setContent(~{this::content})}">
     <th:block th:fragment="content">
-        <h1 class="mt-4">GuestBook Register Page</h1>
+        <h1 class="mt-4">게시글 등록</h1>
         <form th:action="@{/board/write}" th:method="post">
             <div class="form-group">
                 <label>Title</label>
                 <input type="text" class="form-control" name="title" placeholder="Enter Title">
+            </div>
+            <div class="form-group">
+                <label>역 정보 입력하기</label>
+                <input type="checkbox" id="trainYn">
+                <div>
+                    <label>역 이름</label>
+                    <input type="text" name="stdStation">
+                    <button type="button" class="btn btn-primary">검색</button>
+                </div>
+
+            </div>
+            <div class="form-group">
+
             </div>
             <div class="form-group">
                 <label>Content</label>
