--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -13,6 +13,7 @@
         <link th:href="@{/css/styles.css}" rel="stylesheet"/>
     </head>
     <body>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
     <!-- Bootstrap core JS-->
     <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js}"></script>
     <!-- Core theme JS-->
