--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -24,11 +24,8 @@
             <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/}">Home</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/board/list}">게시판</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/board}">게시판</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/chat?lno=0}">채팅</a>
             </div>
         </div>
         <!-- Page content wrapper-->
