홈 화면 프로젝트 소개

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,12 @@
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
     <th:block th:fragment="content">
         <h1 class="mt-4">한상혁 포트폴리오</h1>
-        <h3 class="m-sm-3"> 스프링 부트, 부트 스트랩, JS, JQuery, Thymeleaf 사용</h3>
+        <h3 class="m-sm-3">스프링 부트, 부트 스트랩, JS, JQuery, Thymeleaf 사용</h3>
         <h3 class="m-sm-3">h2 Database- JPA 사용하여 게시판 구현</h3>
         <h3 class="m-sm-3">OAuth2 사용한 구글 로그인 구현</h3>
         <h3 class="m-sm-3">서울시 지하철 API 사용하여 역 및 호선 검색 구현</h3>
         <h3 class="m-sm-3">WebSocket 사용한 실시간 채팅 구현</h3>
+        <h3 class="m-sm-3">AWS 배포</h3>
     </th:block>
 </th:block>
 </html>
