--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
         <h3 class="m-sm-3">OAuth2 사용한 구글 로그인 구현</h3>
         <h3 class="m-sm-3">서울시 지하철 API 사용하여 역 및 호선 검색 구현</h3>
         <h3 class="m-sm-3">WebSocket 사용한 실시간 채팅 구현</h3>
-        <h3 class="m-sm-3">AWS 배포</h3>
+        <h3 class="m-sm-3">AWS, RDS 배포</h3>
     </th:block>
 </th:block>
 </html>
