배포 오류 수정 Thymeleaf / 삭제

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+<th:block th:replace="~{layout/basic :: setContent(~{this::content})}">
     <th:block th:fragment="content">
         <h1 class="mt-4">한상혁 포트폴리오</h1>
         <h3 class="m-sm-3">스프링 부트, 부트 스트랩, JS, JQuery, Thymeleaf 사용</h3>
